# arcanum

./: .envrc  .gitattributes  .gitignore  .sops.yaml  Cargo.toml  README.md  deploy.nix  flake.nix  git-agecrypt.toml  outputs.nix  per-system.nix
.unused/modules/: crowdsec-localhostage.nix  moonshine.nix  netdata.nix  nfs-client.nix  ntfy.nix
home/localpost/: default.nix
home/localtoast/: programs.nix
home/lolcathost/: default.nix  programs.nix
hosts/: generic.nix
hosts/localcoast/: default.nix
lib/: default.nix
lib/flake/: default.nix  (+2 more)
secrets/: acme.env  adguard-secrets.yaml  alertmanager-secrets.yaml  atuin-secrets.yaml  builder-key.yaml  caddy-secrets.yaml  calibre-users.sqlite  crowdsec-localcoast.yaml  crowdsec-localghost.yaml  crowdsec-localhoax.yaml  crowdsec-localhostage.yaml  crowdsec-localpost.yaml  crowdsec-localtoast.yaml  crowdsec-lokalhost.yaml  crowdsec-lolcathost.yaml  duckdns-secrets.yaml  forgejo-secrets.yaml  geoip-secrets.yaml  grafana-secrets.yaml  hass-secrets.yaml  headscale-secrets.yaml  healthchecks-secrets.yaml  initrd-secrets.yaml  kanidm-secrets.yaml  localcoast-userpassword.yaml  localghost-userpassword.yaml  localhoax-userpassword.yaml  localhostage-userpassword.yaml  localpost-userpassword.yaml  localtoast-userpassword.yaml  lokalhost-userpassword.yaml  loki-secrets.yaml  mailserver-secrets.yaml  mealie-secrets.yaml  minio-forgejo.yaml  minio-loki.yaml  minio-obsidian.yaml  minio-secrets.env  netdata-ntfy.env  ntfy-push.env  (+39 more)
src/: config.rs  deploy.rs  error.rs  eval.rs  log.rs  main.rs  ssh.rs
var/: README.md  global.nix
(+213 files in other folders)
