[package]
name = "arcanum"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
serde_json = "1.0.137"
chrono = "0.4.39"
colored = "3.0.0"
indicatif = { version = "0.17.11", features = ["improved_unicode"] }
bat = "0.25.0"

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
